# fraud-detection

./: .gitignore  README.md  pyproject.toml
api/: main.py
app/: ui.py
notebooks/: 01-eda.ipynb  02-eval-harness.ipynb  03-imbalance-comparison.ipynb  04-features.ipynb  05-calibration.ipynb  06-shap.ipynb  07-final-model.ipynb
reports/: comparison-report.md
src/: data_prep.py  eval_harness.py  features.py  pipeline.py
